updated Sat Feb 28 23:56:37 IST 2026